fix bio tab overflow issue

--- a/src/foundryvtt-5eOGLCharacterSheet.scss
+++ b/src/foundryvtt-5eOGLCharacterSheet.scss
@@ -50,6 +50,10 @@
       overflow: initial;
       height: auto;
     }
+
+    .sheet-body {
+      flex: 1 auto;
+    }
   }
 
   input[type='text'] {
