--- a/src/styles/biography.scss
+++ b/src/styles/biography.scss
@@ -25,7 +25,7 @@
     border-radius: $border-radius;
     display: flex;
     flex-direction: column;
-    flex: 0 1 auto;
+    flex: 1 auto;
     padding: $space / 2;
 
     h4 {
